undo rename of Game to ClassicGame, because it did not make sense